2014-10-08  K. Handa  <handa@gnu.org>

	* coding.c (detect_coding_iso_2022): Set coding->rejected
	correctly when an invalid escape sequence is found (Bug#18610).

2014-10-03  Dmitry Antipov  <dmantipov@yandex.ru>

	* font.c (font_list_entities): Do not add empty vector to font cache.
	(font_matching_entity): Likewise.  If matching entity is found, insert
	1-item vector with this entity instead of an entity itself (Bug#17125).

2014-10-02  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (move_it_by_lines): Call reseat_1 after moving the
	iterator backwards, to resync the bidi iterator.  (Bug#18584)

2014-10-01  Jan Djärv  <jan.h.d@swipnet.se>

	* xfaces.c (Finternal_set_lisp_face_attribute): Don't try to
	make a font_object from a tty frame (Bug#18573).
	(Finternal_set_lisp_face_attribute): Added FIXME comment.

2014-09-30  Eli Zaretskii  <eliz@gnu.org>

	* w32fns.c (w32_createwindow): Accept an additional argument, an
	array of 2 values specifying the coordinates of the frame's
	top-left corner.  Use these values instead of calling x_get_arg,
	which can cons Lisp objects, and therefore cannot be called except
	from the main thread.  Remove redundant tests for the default
	values.
	(my_create_window): Move the calculation of the coordinates of the
	frame's top-left edge here.  Pass them to the input thread via the
	second parameter of the WM_EMACS_CREATEWINDOW message.  See
	http://lists.gnu.org/archive/html/emacs-devel/2014-09/msg00892.html
	for the details.

2014-09-29  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (cursor_row_fully_visible_p): Update commentary.
	(redisplay_window): Treat the frame's frozen_window_starts flag
	the same way as the optional_new_start flag for the window: only
	obey it if the glyph row showing point will be fully visible.
	Likewise when the window start is in a continuation line.  If,
	after trying everything under the 'force_start' label, point is
	still not fully visible, give up and scroll the window.  Add
	debugging traces.  (Bug#18545)
